Opened 16 years ago

Closed 16 years ago

Last modified 16 years ago

#4214 closed bug (fixed)

MediaPlayer crashes on audio CD Drag-and-Drop

Reported by: koki Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/MediaPlayer Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

1) Insert audio CD, and let its icon appear on the desktop. 2) Run MediaPlayer. 3) Drag-and-Drop the audio CD icon on MediaPlayer. 4) MediaPlayer crashes.

100% reproduceable in fresh install of hrev32231. Backtrace attached.

Attachments (1)

bt_mediaplayer (2.3 KB ) - added by koki 16 years ago.
Backtrace of MediaPlayer crash

Download all attachments as: .zip

Change History (5)

by koki, 16 years ago

Attachment: bt_mediaplayer added

Backtrace of MediaPlayer crash

comment:1 by axeld, 16 years ago

Owner: changed from marcusoverhagen to axeld
Status: newassigned

I can reproduce it here, too, easily.

comment:2 by axeld, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev32254. Unfortunately, the MediaPlayer doesn't seem to be able to play the files, at least it seems to seek forever on them.

in reply to:  2 ; comment:3 by koki, 16 years ago

Replying to axeld:

Fixed in hrev32254.

Thanks Axel. :)

Unfortunately, the MediaPlayer doesn't seem to be able to play the files, at least it seems to seek forever on them.

I suppose this would require a separate bug report?

in reply to:  3 comment:4 by axeld, 16 years ago

Replying to koki:

I suppose this would require a separate bug report?

It actually plays if you wait a bit (during the wait the interface is not responding). I'm not really looking forward to look into it, though, so I guess I will file a bug report about this. Worst case, CDPlayer gets released as well for now :-)

Note: See TracTickets for help on using tickets.